# rootthreads

./: CMakeLists.txt
include/: data.h  root.h
src/: data.c  main.c  root.c
